[package]
name = "icinga2-api"
description = "Rust client for the Icinga2 API"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.2.13"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/icinga2-api"
keywords = [ "icinga2", "api" ]
categories = [ "api-bindings" ]
exclude = [ ".env", "*_instance.toml", "*.pem", "*.crt", "*.key", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async","blocking"]
enumoid = [ "dep:enumoid" ]
async   = ["dep:futures", "dep:tokio", "dep:tokio-stream", "dep:tokio-util", "reqwest/stream"]
blocking = ["reqwest/blocking"]

[dependencies]

[dependencies.thiserror]
version = "2.0.12"

[dependencies.tracing]
version = "0.1.41"

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.serde_path_to_error]
version = "0.1.17"

[dependencies.serde_repr]
version = "0.1.20"

[dependencies.derive_more]
version = "2.0.1"
features = ["from_str", "display"]

[dependencies.derive_builder]
version = "0.20.2"

[dependencies.toml]
version = "0.8.20"

[dependencies.url]
version = "2.5.4"

[dependencies.http]
version = "1.2.0"

[dependencies.time]
version = "0.3.39"
features = [ "macros", "serde", "serde-human-readable" ]

[dependencies.futures]
version = "0.3.31"
optional = true

[dependencies.tokio]
version = "1.43.0"
optional = true

[dependencies.tokio-stream]
version = "0.1.17"
features = ["io-util"]
optional = true

[dependencies.tokio-util]
version = "0.7.13"
features = ["io"]
optional = true

[dependencies.enumoid]
version = "0.4.0"
optional = true

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.dotenvy]
version = "0.15.7"

[dev-dependencies.tracing-test]
version = "0.2.5"

[dev-dependencies.tokio]
version = "1.43.0"
features = [ "macros" ]
