[package]
name = "icinga2-api"
description = "Rust client for the Icinga2 API"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.2.20"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/icinga2-api"
keywords = ["icinga2", "api"]
categories = ["api-bindings"]
exclude = [
    ".env",
    "*_instance.toml",
    "*.pem",
    "*.crt",
    "*.key",
    "tarpaulin-report.html",
    "tarpaulin-report.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async", "blocking"]
enumoid = ["dep:enumoid"]
async   = [
    "dep:futures",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "reqwest/stream",
]
blocking = ["reqwest/blocking"]

[dependencies]

[dependencies.derive_builder]
version = "0.20.2"

[dependencies.derive_more]
version = "2.1.1"
features = ["from_str", "display"]

[dependencies.enumoid]
version = "0.4.0"
optional = true

[dependencies.futures]
version = "0.3.31"
optional = true

[dependencies.reqwest]
version = "0.13.2"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"

[dependencies.serde_path_to_error]
version = "0.1.20"

[dependencies.serde_repr]
version = "0.1.20"

[dependencies.thiserror]
version = "2.0.18"

[dependencies.time]
version = "0.3.47"
features = ["macros", "serde", "serde-human-readable"]

[dependencies.tokio]
version = "1.49.0"
optional = true

[dependencies.tokio-stream]
version = "0.1.18"
features = ["io-util"]
optional = true

[dependencies.tokio-util]
version = "0.7.18"
features = ["io"]
optional = true

[dependencies.toml]
version = "0.9.11"

[dependencies.tracing]
version = "0.1.44"

[dependencies.url]
version = "2.5.8"

[dev-dependencies.dotenvy]
version = "0.15.7"

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.tokio]
version = "1.49.0"
features = ["macros"]

[dev-dependencies.tracing-test]
version = "0.2.6"

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true
